--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -137,6 +137,7 @@
   }
   .choiceTitle {
     font-size: 40px;
+    margin-bottom: 50px;
   }
   .choices {
     flex-direction: column;
@@ -172,7 +173,6 @@
     margin-bottom: 50px;
   }
   .aboutImgWrapper {
-    
     width: 90%;
   }
 }
@@ -201,7 +201,7 @@
   .choiceTitle,
   .aboutTitle,
   .aboutBoss {
-    font-size: 32px;
+    font-size: 40px;
   }
   .boss {
     font-size: 40px;
